--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,5 +11,15 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx">
     </script>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+    <script
+      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+      crossorigin></script>
+    
+    <script
+      src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin></script>
+    
   </body>
 </html>
